# Insight3d

./: .gitignore  CMakeLists.txt  README.txt  README.txt~  insight3d.sln  insight3d.userprefs
.svn/: all-wcprops  entries
.svn/text-base/: insight3d.suo.svn-base
CMakeModules/: FindANN.cmake  FindDAISY.cmake  FindGDK_PIXBUF.cmake  FindSBA.cmake  FindSDL.cmake  FindSIFT.cmake
Debug/.svn/: all-wcprops  entries
Debug/.svn/text-base/: insight3d.exe.svn-base  insight3d.ilk.svn-base  insight3d.pdb.svn-base
Release/.svn/: all-wcprops  entries
Release/.svn/text-base/: insight3d.exe.svn-base
doc/: CMakeLists.txt
insight3d/: Makefile  tool_matching.cpp
insight3d/.svn/: all-wcprops  entries
insight3d/.svn/text-base/: ANN.dll.svn-base
insight3d/Debug/.svn/: all-wcprops  entries
insight3d/Release/.svn/: all-wcprops  entries
insight3d/ann_1.1.1/.svn/: all-wcprops  entries
insight3d/ann_1.1.1/MS_Win32/: Ann.sln  UpgradeLog.XML
insight3d/daisy-1.2/.svn/: all-wcprops  entries
insight3d/dlls/.svn/: all-wcprops  entries
insight3d/example_photoset/: list_of_photos.ifl
insight3d/lapack/.svn/: all-wcprops  entries
insight3d/sba/.svn/: all-wcprops  entries
insight3d/sba/demo/: eucsbademo
insight3d/sift/.svn/: all-wcprops  entries
insight3d/sift/src/: siftfeat.c
insight3d/sift_win/: Thumbs.db  beaver.sift  dspfeat.c  imgfeatures.c  kdtree.c  sift.c  utils.c  xform.c
insight3d/sift_win/.svn/: all-wcprops  entries
insight3d/sift_win/dspFeat/: dspFeat.ncb  (+1 more)
src/: CMakeLists.txt  Makefile  application.cpp  geometry_structures.h  tool_calibration.cpp
(+160 files in other folders)
