CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT (Insight3Dng)
SET(CMAKE_BUILD_TYPE Release)

SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/CMakeModules")

FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACKAGE(LibXml2 REQUIRED)
FIND_PACKAGE(SDL REQUIRED)
FIND_PACKAGE(GTK2 REQUIRED)
FIND_PACKAGE(ANN REQUIRED)
FIND_PACKAGE(LAPACK REQUIRED)
FIND_PACKAGE(BLAS REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED)
#FIND_PACKAGE(GLU REQUIRED)
FIND_PACKAGE(DAISY REQUIRED)
FIND_PACKAGE(SIFT REQUIRED)
FIND_PACKAGE(SBA REQUIRED)
FIND_PACKAGE(GDK_PIXBUF REQUIRED)

INCLUDE_DIRECTORIES(
	${SDL_INCLUDE_DIR} 
	${SIFT_INCLUDE_DIR} 
	${LIBXML2_INCLUDE_DIR} 
	${GTK2_INCLUDE_DIRS} 
	${ANN_INCLUDE_DIR}
	${LAPACK_INCLUDE_DIR}
	${BLAS_INCLUDE_DIR}
	${OPENGL_INCLUDE_DIR}
	${DAISY_INCLUDE_DIR}
	${SBA_INCLUDE_DIR}
	${GDK_PIXBUF_INCLUDE_DIR}
)

SET(LIBS 
	${OpenCV_LIBS} 
	${LIBXML2_LIBRARIES} 
	${SDL_LIBRARY} 
	${GTK2_LIBRARIES} 
	${ANN_LIBRARY} 
	${LAPACK_LIBRARIES} 
	${BLAS_LIBRARIES} 
	${OPENGL_LIBRARIES} 
	${DAISY_LIBRARY}
	${GDK_PIXBUF_LIBRARIES}
	${SIFT_LIBRARY}
	${SBA_LIBRARY}
)


ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(doc)
